test.log
[ 94% 1399/1475] Installed file list: out/target/product/oia_vm/installed-files.txt
[ 94% 1400/1475] Dist: out/dist/installed-files.json
[ 94% 1401/1475] Dist: out/dist/installed-files.txt
[ 95% 1402/1475] Install: out/target/product/oia_vm/product/priv-app/technology.cariad.navi.oi/technology.cariad.navi.oi.apk
[ 95% 1403/1475] Installed file list: out/target/product/oia_vm/installed-files-product.txt
[ 95% 1404/1475] Dist: out/dist/installed-files-product.json
[ 95% 1405/1475] Dist: out/dist/installed-files-product.txt
[ 95% 1406/1475] //packages/apps/Car/esolutions/SystemUI:CarSystemUI-Audi-core turbine apt
[ 95% 1407/1475] Package apps: out/target/product/oia_vm/HCP3__AU_MRM_S__U-apps-eng.ivi_cicd_gh_runner.zip
[ 95% 1408/1475] Dist: out/dist/HCP3__AU_MRM_S__U-apps-eng.ivi_cicd_gh_runner.zip
[ 95% 1409/1475] technology.cariad.assistant.audi dexpreopt
[ 95% 1410/1475] Install: out/target/product/oia_vm/system_ext/priv-app/technology.cariad.assistant.audi/technology.cariad.assistant.audi.apk
[ 95% 1411/1475] Target system fs image: out/target/product/oia_vm/obj/PACKAGING/systemimage_intermediates/system.img
[ 95% 1412/1475] //packages/apps/Car/esolutions/SystemUI:CarSystemUI-Audi-core kotlinc
FAILED: out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlin/CarSystemUI-Audi-core.jar out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlin_headers/CarSystemUI-Audi-core.jar
rm -rf "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/classes" "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/header_classes" "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/srcJars" "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc-build.xml" "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/empty" && mkdir -p "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/classes" "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/header_classes" "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/srcJars" "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/empty" && out/host/linux-x86/bin/zipsync -d out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/srcJars -l out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/srcJars/list -f "*.java" out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/gen/aidl/aidl0.srcjar out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/gen/android/R.srcjar out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kapt/kapt-sources.jar && out/host/linux-x86/bin/gen-kotlin-build-file --classpath "out/soong/.intermediates/build/soong/java/core-libraries/stable.core.platform.api.stubs/android_common/turbine-combined/stable.core.platform.api.stubs.jar:out/soong/.intermediates/libcore/core-lambda-stubs/android_common/turbine-combined/core-lambda-stubs.jar:out/soong/.intermediates/frameworks/base/ext/android_common/turbine-combined/ext.jar:out/soong/.intermediates/frameworks/base/framework/android_common/turbine-combined/framework.jar:out/soong/.intermediates/packages/services/Car/car-lib/android.car/android_common/turbine-combined/android.car.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/fw/de.esolutions.fw.android.rsi-stapi/android_common/turbine-combined/de.esolutions.fw.android.rsi-stapi.jar:out/soong/.intermediates/packages/apps/Car/SystemUI/CarSystemUI-core/android_common/turbine-combined/CarSystemUI-core.jar:out/soong/.intermediates/vendor/esolutions/libs/rx/io.reactivex.rxjava3/android_common/turbine-combined/io.reactivex.rxjava3.jar:out/soong/.intermediates/vendor/esolutions/libs/rx/io.reactivex.rxjava3.android/android_common/turbine-combined/io.reactivex.rxjava3.android.jar:out/soong/.intermediates/vendor/esolutions/libs/rx/io.reactivex.rxjava3.kotlin/android_common/turbine-combined/io.reactivex.rxjava3.kotlin.jar:out/soong/.intermediates/prebuilts/sdk/current/androidx/androidx.core_core-ktx/android_common/turbine-combined/androidx.core_core-ktx.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/usermanagement/de.eso.usermanagement.api/android_common/aar/classes-combined.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/phoneaccount/de.eso.phoneaccount/android_common/aar/classes-combined.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/coma/de.eso.connectivitymanager.access/android_common/aar/classes-combined.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/radx/de.eso.rsi.java/android_common/turbine-combined/de.eso.rsi.java.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/fw/de.esolutions.fw.android.rsi-support/android_common/turbine-combined/de.esolutions.fw.android.rsi-support.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/radx/de.eso.radx.logging/android_common/turbine-combined/de.eso.radx.logging.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/radx/de.eso.radx.coding/android_common/turbine-combined/de.eso.radx.coding.jar:out/soong/.intermediates/vendor/esolutions/overlays/ambientcolor/lib/de.eso.audi.ambientcolor.lib/android_common/turbine-combined/de.eso.audi.ambientcolor.lib.jar:out/soong/.intermediates/vendor/cariad/hardware/interfaces/aidl/vendor.cariad.automotive.vehicle-V1-java/android_common/turbine-combined/vendor.cariad.automotive.vehicle-V1-java.jar:out/soong/.intermediates/vendor/esolutions/libs/eso/embedded-view-lib/de.esolutions.embedded_view_lib/android_common/aar/classes-combined.jar:out/soong/.intermediates/vendor/esolutions/libs/volkswagenag/com.volkswagenag.dynamicfunctionblocking/android_common/combined/com.volkswagenag.dynamicfunctionblocking.jar:out/soong/.intermediates/external/kotlinc/kotlin-stdlib/android_common/combined/kotlin-stdlib.jar:out/soong/.intermediates/external/kotlinc/kotlin-stdlib-jdk7/android_common/combined/kotlin-stdlib-jdk7.jar:out/soong/.intermediates/external/kotlinc/kotlin-stdlib-jdk8/android_common/combined/kotlin-stdlib-jdk8.jar:out/soong/.intermediates/external/kotlinc/kotlin-annotations/android_common/combined/kotlin-annotations.jar" --name "packages__apps__Car__esolutions__SystemUI__android_common__CarSystemUI-Audi-core" --out_dir "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/classes" --srcs "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlin/CarSystemUI-Audi-core.jar.rsp" --srcs "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/srcJars/list"  --out "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc-build.xml" && external/kotlinc/bin/kotlinc -Didea.plugins.compatible.build=999.SNAPSHOT  -J--add-opens=java.base/java.util=ALL-UNNAMED -J-Xmx4096M  -Xjvm-default=enable -Xsam-conversions=class -no-stdlib -no-jdk -jvm-target 17 -Xbuild-file=out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc-build.xml  -kotlin-home out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/empty  -Xplugin=external/kotlinc/lib/jvm-abi-gen.jar  -P plugin:org.jetbrains.kotlin.jvm.abi:outputDir=out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/header_classes && out/host/linux-x86/bin/soong_zip -jar -o out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlin/CarSystemUI-Audi-core.jar -C out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/classes -D out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/classes -write_if_changed && out/host/linux-x86/bin/soong_zip -jar -o out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlin_headers/CarSystemUI-Audi-core.jar -C out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/header_classes -D out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/header_classes -write_if_changed && rm -rf "out/soong/.intermediates/packages/apps/Car/esolutions/SystemUI/CarSystemUI-Audi-core/android_common/kotlinc/srcJars"
packages/apps/Car/esolutions/SystemUI/src/com/android/systemui/car/keyguard/EsoKeyguardDisplayManager.kt:116:5: error: 'isKeyguardShowable' overrides nothing
    override fun isKeyguardShowable(display: Display?): Boolean {
    ^
packages/apps/Car/esolutions/SystemUI/src/com/android/systemui/car/keyguard/EsoKeyguardDisplayManager.kt:121:22: error: unresolved reference: isKeyguardShowable
        return super.isKeyguardShowable(display) && !isHudOrFid
                     ^
[ 95% 1413/1475] Install system fs image: out/target/product/oia_vm/system.img
[ 95% 1414/1475] Target product fs image: out/target/product/oia_vm/product.img
ninja: build stopped: subcommand failed.
06:48:30 ninja failed with: exit status 1
